[tool.poetry]
name = "opsdroid-st2"
version = "0.1.0"
description = "ChatOps for StackStorm based on OpsDroid. This contains the components for the OpsDroid side of chatops, including connector and dynamic skill."
authors = [
  "Jacob Floyd <cognifloyd@gmail.com>"
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
opsdroid = {version = "^0.24.0", extras = ["database_mongo", "database_redis"]}

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
connector_matrix = ["opsdroid[connector_matrix,database_matrix]"]
connector_matrix_e2e = ["opsdroid[connector_matrix_e2e,connector_matrix,database_matrix]"]
connector_mattermost = ["opsdroid[connector_mattermost]"]
connector_slack = ["opsdroid[connector_slack]"]
connector_webex = ["opsdroid[connector_webex]"]
connector_teams = ["opsdroid[connector_teams]"]
connector_telegram = ["opsdroid[connector_telegram]"]
parser_dialogflow = ["opsdroid[parser_dialogflow]"]
parser_watson = ["opsdroid[parser_watson]"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
# atomic = true
# force_alphabetical_sort_within_sections = true
# lexicographical = true
# group_by_package = true

# eventlet is prohibited in DroidStorm
# remove_imports = eventlet

# pants says this can resolve some issues
default_section = "THIRDPARTY"

#https://bandit.readthedocs.io/en/latest/config.html
#[tool.bandit]
