[project]
name = "opsdroid-st2"
version = "0.1.0"
description = "ChatOps for StackStorm based on OpsDroid. This contains the components for the OpsDroid side of chatops, including connector and dynamic skill."
authors = [
  {name = "StackStorm", email = "info@stackstorm.com"},
  {name = "Jacob Floyd", email = "cognifloyd@gmail.com>"},
]
license = "Apache-2.0"
license-files = ["LICENSE"]

requires-python = ">=3.11,<3.12"
dependencies = [
  "opsdroid[database_mongo,database_redis]==0.30.0",
  # "st2client",
  # "aiohttp",
  # "aiohttp-sse-client",
  # "yarl",
]

[project.optional-dependencies]
connector_matrix = ["opsdroid[connector_matrix,database_matrix]"]
connector_matrix_e2e = ["opsdroid[connector_matrix_e2e,connector_matrix,database_matrix]"]
connector_mattermost = ["opsdroid[connector_mattermost]"]
connector_slack = ["opsdroid[connector_slack]"]
connector_webex = ["opsdroid[connector_webex]"]
connector_teams = ["opsdroid[connector_teams]"]
connector_telegram = ["opsdroid[connector_telegram]"]
parser_dialogflow = ["opsdroid[parser_dialogflow]"]
parser_watson = ["opsdroid[parser_watson]"]

[project.urls]
homepage = "https://stackstorm.com"
github = "https://github.com/st2sandbox/opsdroid-st2"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
# atomic = true
# force_alphabetical_sort_within_sections = true
# lexicographical = true
# group_by_package = true

# eventlet is prohibited in DroidStorm
# remove_imports = eventlet

# pants says this can resolve some issues
default_section = "THIRDPARTY"

#https://bandit.readthedocs.io/en/latest/config.html
#[tool.bandit]
